--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
                 </div>
             </div>
             <div class="album-cover">
-                <img src="./img/dreamy-nights-album-cover.jpg" alt="album cover">
+                <img src="./img/In Heat X BloodPop!.jpg" alt="album cover">
             </div>
             <div class="song-info">
-                <p class="title">dreamy night</p>
-                <p class="artist">Us the Duo</p>
+                <p class="title">ɪɴ ʜᴇᴀᴛ х ʙʟᴏᴏᴅ ᴩᴏᴩ</p>
+                <p class="artist">ᴍᴀᴅᴇ ʙч ʟᴏᴋɪ</p>
             </div>
             <div class="song-timeline">
                 <span id="current-time" class="time-stamp">0:00</span>
@@ -110,4 +110,4 @@
 
 </body>
 
-</html>
+                        </html>
